--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2  # Checkout your repository
 
     - name: Set up CMake
-      uses: cmake/action-setup@v1  # Set up CMake
+      uses: cmake/setup-cmake@v1  # Set up CMake
 
     - name: Configure
       run: cmake -Bbuild
