--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: List directory contents
+      run: ls -la
+
     - name: Install CMake
       run: sudo apt-get install -y cmake
+
+    - name: List directory contents
+      run: ls -la
 
     - name: Configure
       run: cmake -Bbuild
