--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,9 @@ jobs:
     - name: List directory contents
       run: ls -la
 
+    - name: Move to project directory
+      run: cd project
+
     - name: Configure
       run: cmake -Bbuild
 
