--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,10 @@ jobs:
       run: ls -la
 
     - name: Configure
-      run: cmake -Bproject/build -Sproject
+      run: cmake -Bproject -Sproject
 
     - name: Build
-      run: cmake --build project/build
+      run: cmake --build project
 
     - name: Run tests
-      run: ctest --test-dir project/build --output-on-failure
+      run: ctest --test-dir project --output-on-failure
