--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,10 @@ jobs:
     - name: List directory contents
       run: ls -la
 
+    - name: List contents of project folder
+      run: ls -la project
+
+
     - name: Configure
       run: cmake -Bproject -Sproject
 
