--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,24 +7,23 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  # Use Windows runner instead of Ubuntu
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: List directory contents
-      run: ls -la
+      run: dir
 
     - name: Install CMake
-      run: sudo apt-get install -y cmake
+      run: choco install cmake --installargs '"ADD_CMAKE_TO_PATH=System"'
 
     - name: List directory contents
-      run: ls -la
+      run: dir
 
     - name: List contents of project folder
-      run: ls -la project
-
+      run: dir project
 
     - name: Configure
       run: cmake -Bproject -Sproject
