--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,17 @@ on:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
+
+    steps:name: Run Tests
+
+on:
+  push:
+    branches:
+      - main  # Change this to the branch you want to trigger the workflow on
+
+jobs:
+  build:
     runs-on: windows-latest  # Use Windows runner instead of Ubuntu
 
     steps:
@@ -24,6 +35,31 @@ jobs:
 
     - name: List contents of project folder
       run: dir project
+
+    - name: Configure
+      run: cmake -Bproject -Sproject
+
+    - name: Build
+      run: cmake --build project
+
+    - name: Run tests
+      run: ctest --test-dir project --output-on-failure
+
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: List directory contents
+      run: ls -la
+
+    - name: Install CMake
+      run: sudo apt-get install -y cmake
+
+    - name: List directory contents
+      run: ls -la
+
+    - name: List contents of project folder
+      run: ls -la project
+
 
     - name: Configure
       run: cmake -Bproject -Sproject
