--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -17,15 +17,15 @@ enable_testing()
 add_subdirectory(googletest)
 
 # Include directories for header files
-include_directories(include libraries)
+include_directories(include/base libraries)
 
 # Collect source files from src directory
-file(GLOB_RECURSE Sources src/*.cpp)
+file(GLOB_RECURSE Sources src/base/*.cpp)
 
 # Create library using all source files
 add_library(${This} STATIC ${Sources})
 
-add_executable(${This}_main "src/neural_net.cpp")
+add_executable(${This}_main "src/base/neural_net.cpp")
 
 target_link_libraries(${This}_main PRIVATE ${This})
 
