--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -14,14 +14,25 @@ set(CMAKE_CXX_STANDARD 17)
 
 enable_testing()
 
-add_subdirectory(googletest)
+# Include FetchContent module
+include(FetchContent)
+
+# Fetch GoogleTest
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/refs/tags/release-1.11.0.zip
+)
+
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+FetchContent_MakeAvailable(googletest)
 
 # Include directories for header files
 include_directories(include include/layers libraries)
 
 # Collect source files from src directory and its subdirectories
-file(GLOB_RECURSE Sources src/*.cpp )
-
+file(GLOB_RECURSE Sources src/*.cpp)
 
 # Create library using all source files
 add_library(${This} STATIC ${Sources})
