new readme and small changes

--- a/project/test/CMakeLists.txt
+++ b/project/test/CMakeLists.txt
@@ -5,7 +5,7 @@ set(This NueralNetTest)
 set(Tests
     testtest.cpp
     test_cost_function.cpp
-    test_neuron.cpp
+    test_connection.cpp
     test_layer.cpp
 )
 
